030-software/fluxcd/apps/web-check/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-check
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: web-check
