030-software/fluxcd/apps/web-check/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-check
  annotations:
    dashboard.${domain}/name: web-check
    dashboard.${domain}/url: https://web-check.${domain}
    dashboard.${domain}/icon: shield
spec:
  hostnames:
  - web-check.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: web-check
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
